force-app/main/default/objects/Creditsafe_Company_Share_Holder__c/Creditsafe_Company_Share_Holder__c.object-meta.xml
<CustomObject>
    <description>Information on a share holder.</description>
    <label>Creditsafe Company Share Holder</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Creditsafe Company ShareHolder</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Creditsafe Company Share Holders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>