force-app/main/default/objects/Creditsafe_Company_Share_Holder__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A CreditsafeAddressV2.</description>
    <label>Address</label>
    <referenceTo>Dossier_Address__c</referenceTo>
    <relationshipLabel>Creditsafe Company Share Holders</relationshipLabel>
    <relationshipName>Share_Holders</relationshipName>
    <type>Lookup</type>
</CustomField>