force-app/main/default/objects/Creditsafe_Company_Share_Holder__c/fields/Share_Percent__c.field-meta.xml
<CustomField>
    <fullName>Share_Percent__c</fullName>
    <description>Percentage this share holder has in shares.</description>
    <label>Share Percent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>